--- a/pages/global.scss
+++ b/pages/global.scss
@@ -1,3 +1,13 @@
+// Reset
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+// Styles
+
 @font-face {
   font-family: Merriweather;
   src: url('/fonts/merriweather/merriweather-latin-400.woff2');
@@ -51,18 +61,8 @@ body {
 }
 
 html,
-body,
-#__next {
-  height: 100%;
-}
-
-html,
 body {
-  overflow: hidden;
-}
-
-#__next {
-  overflow: auto;
+  height: 100%;
 }
 
 @mixin light-theme {
@@ -86,7 +86,7 @@ body {
   @include light-theme;
 
   font-family: Merriweather, Georgia, serif;
-  line-height: 1.7;
+  line-height: 1.6;
 
   --brand-hue: 108;
   --brand2-hue: calc(360 - var(--brand-hue));
@@ -165,4 +165,113 @@ select {
 
 ::selection {
   background-color: color-mix(in oklab, var(--brand), var(--white) 30%);
+}
+
+/// Layout
+
+@layer layout {
+  #__next {
+    min-height: 100%;
+    padding: 32px 0 16px 0;
+  }
+
+  #__next,
+  .full-width {
+    --minimum-content-padding: 8px;
+
+    /** TRACK WIDTHS **/
+    --full-max-width: 1fr;
+    --breakout-max-width: 80ch;
+    --content-max-width: 64ch;
+    --inset-content-max-width: 48ch;
+
+    /** TRACK SIZES **/
+    --full: minmax(var(--minimum-content-padding), 1fr);
+    --breakout: minmax(
+      0,
+      calc((var(--breakout-max-width) - var(--content-max-width)) * 0.5)
+    );
+    --content: minmax(
+      0,
+      calc((var(--content-max-width) - var(--inset-content-max-width)) * 0.5)
+    );
+    --inset-content: min(
+      var(--inset-content-max-width),
+      100% - var(--minimum-content-padding) * 2
+    );
+
+    display: grid;
+    grid-template-columns:
+      [full-start]
+      var(--full)
+      [breakout-start]
+      var(--breakout)
+      [content-start]
+      var(--content)
+      [inset-content-start]
+      var(--inset-content)
+      [inset-content-end]
+      var(--content)
+      [content-end]
+      var(--breakout)
+      [breakout-end]
+      var(--full)
+      [full-end];
+
+    > * {
+      grid-column: content;
+    }
+  }
+
+  /** CLASSES **/
+  .full {
+    grid-column: full;
+  }
+  .full-start {
+    grid-column-start: full-start;
+  }
+  .full-end {
+    grid-column-end: full-end;
+  }
+
+  .breakout {
+    grid-column: breakout;
+  }
+  .breakout-start {
+    grid-column-start: breakout-start;
+  }
+  .breakout-end {
+    grid-column-end: breakout-end;
+  }
+
+  .content {
+    grid-column: content;
+  }
+  .content-start {
+    grid-column-start: content-start;
+  }
+  .content-end {
+    grid-column-end: content-end;
+  }
+
+  .inset-content {
+    grid-column: inset-content;
+  }
+  .inset-content-start {
+    grid-column-start: inset-content-start;
+  }
+  .inset-content-end {
+    grid-column-end: inset-content-end;
+  }
+
+  .full-width {
+    grid-column: full;
+  }
+  .full-content,
+  .full-content-nopad {
+    grid-column: full;
+  }
+  .full-content {
+    padding-inline: var(--minimum-content-padding);
+  }
 }
